--- a/playlist.css
+++ b/playlist.css
@@ -1,26 +1,21 @@
  body{
-
-      background-image: url(Images/IndexBackground2.png);
-      background-position: bottom;
-      background-size: 100%;
-      background-attachment: fixed;
-      background-repeat: no-repeat;
+      background: white;
 	  font-family: "arial";
   }
 
-
 input[type=text] {
-   padding: 5px;
-background: #46484d;
-border:0 none;
--webkit-border-radius: 5px;
-border-radius: 5px;
+    padding: 5px;
+    background: #46484d;
+    border:0 none;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
     font-size: 15px;
-   box-shadow: 0px 4px 5px rgba(51, 48, 48, 0.83);
+    box-shadow: 0px 4px 5px rgba(51, 48, 48, 0.83);
     color:#65737e;
 }
+
 input[type=text]:focus {
-border-color:#333;
+    border-color:#333;
 }
 input[type=submit] {
    float: right;
@@ -41,12 +36,17 @@ border-radius: 5px;
 #video_player_box {
     width: 100%;
     background: #000;
-    margin: 600px auto;
+    margin-top: 605px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 0px;
     box-shadow: 0px 4px 5px rgb(41, 41, 41);
+
 }
 #video_controls_bar {
- background-color: rgb(57, 57, 57);
-padding: 10px;
+    background-color: rgb(57, 57, 57);
+    padding: 10px;
     color:#65737e;
 }
 #video_controls_bar:hover {
@@ -54,7 +54,7 @@ padding: 10px;
     transition: 0.15s;
 }
 #playpausebtn {
-    color:#65737e;
+    color: ghostwhite;
     margin-left: 50px;
     padding: 5px;
     width: 60px;
@@ -68,22 +68,25 @@ border-radius: 5px;
 }
 #mutebtn {
     margin-left: 900px;
-   color:#65737e;
+    color: ghostwhite;
     padding: 5px;
     width: 60px;
     background: #46484d;
-border:0 none;
-cursor:pointer;
--webkit-border-radius: 5px;
-border-radius: 5px;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
     font-size: 15px;
    box-shadow: 0px 4px 5px rgb(41, 41, 41);
 }
 #seekslider {
-    /*padding-right: 10px;
-    padding-left: 10px;*/
- width: 100%;
- opacity: 0.8;
+    padding-right: 10px;
+    padding-left: 10px;
+    width: 1317px;
+    height: 5px;
+    opacity: 0.8;
+    background: #ff0000;
+    margin-top: 10px;
 }
 #seekslider:hover {
  opacity: 1;
@@ -105,11 +108,10 @@ input[type='range'] {
     background: #000;
     border: #666 solid 1px;
     height: 1px;
-
 }
 input[type='range']::-webkit-slider-thumb {
     -webkit-appearance: none !important;
-    background: rgba(139, 200, 255, 0.77);
+    background: rgba(165, 165, 165, 0.77);
     height: 15px;
     width: 15px;
     border-radius: 100%;
