--- a/playlist.css
+++ b/playlist.css
@@ -53,27 +53,48 @@ border-radius: 5px;
     opacity: 0.9;
     transition: 0.15s;
 }
+
 #playpausebtn {
     color: ghostwhite;
     margin-left: 50px;
+    background: inherit;
+    border:0 none;
+    cursor:pointer;
+    padding: 5px;
+    width: 60px;
+    font-size: 15px;
+}
+
+#playpausebtn:hover {
+
     padding: 5px;
     width: 60px;
     background: #46484d;
-border:0 none;
-cursor:pointer;
+
 -webkit-border-radius: 5px;
 border-radius: 5px;
     font-size: 15px;
     box-shadow: 0px 4px 5px rgb(41, 41, 41);
+    text-align: center;
 }
+
 #mutebtn {
     margin-left: 900px;
     color: ghostwhite;
-    padding: 5px;
-    width: 60px;
-    background: #46484d;
     border:0 none;
     cursor:pointer;
+    background: inherit;
+    padding: 5px;
+    width: 60px;
+    font-size: 15px;
+}
+
+#mutebtn:hover {
+
+    padding: 5px;
+
+    background: #46484d;
+
     -webkit-border-radius: 5px;
     border-radius: 5px;
     font-size: 15px;
@@ -83,17 +104,18 @@ border-radius: 5px;
     padding-right: 10px;
     padding-left: 10px;
     width: 1317px;
-    height: 5px;
+    height: 6px;
     opacity: 0.8;
     background: #ff0000;
     margin-top: 10px;
 }
 #seekslider:hover {
- opacity: 1;
-  -webkit-transition-timing-function: ease-out;
+     opacity: 1;
+      -webkit-transition-timing-function: ease-out;
 }
 #volumeslider {
- width: 80px;
+     width: 80px;
+     padding: 3px;
 }
 #curtimetext {
     color: ghostwhite;
