--- a/Playlists/playlist.css
+++ b/Playlists/playlist.css
@@ -52,13 +52,17 @@ border-radius: 5px;
 #video_player_box {
     width: 1359px;
     height: 80px;
-    background-color: rgba(46, 46, 46, 0.75);
+    background: rgba(46, 46, 46, 0.75); /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(46, 46, 46, 0.75), transparent); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(46, 46, 46, 0.75), transparent); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(46, 46, 46, 0.75), transparent); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(46, 46, 46, 0.75), transparent); /* Standard syntax */
     margin-top: 594px;
     margin-bottom: auto;
     margin-left: -7px;
     margin-right: auto;
     bottom: 0px;
-    box-shadow: 0px 4px 5px rgb(41, 41, 41);
+    box-shadow: 0px -5px 5px -5px rgb(41, 41, 41);*/
 
 }
 
@@ -159,6 +163,6 @@ input[type='range']::-webkit-slider-thumb {
     height: 15px;
     width: 15px;
     border-radius: 100%;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(155, 205, 255);
     cursor: pointer;
 }
