--- a/Playlists/playlist.css
+++ b/Playlists/playlist.css
@@ -1,9 +1,5 @@
  body{
-      background-image: url(../Images/playlistBackground.png);
-     background-size: 100%;
-     background-repeat: no-repeat;
-     background-attachment: fixed;
-     background-position: center;
+      background: rgba(82, 149, 242, 0.89);
 	  font-family: "arial";
   }
 
