--- a/Playlists/playlist.css
+++ b/Playlists/playlist.css
@@ -138,7 +138,7 @@ border-radius: 5px;
     background-color: ghostwhite;
 }
 #curtimetext {
-    color: ghostwhite;
+    color: white;
     font-size: 12px;
 }
 
