moved the files out of the playlist folder and removed the empty folder

--- a/playlist.css
+++ b/playlist.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Arya:700);
 body {
-    background-image: url(../Images/background.png);
+    background-image: url(Images/background.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-origin: content-box;
